--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "gitbook-plugin-ga": "^1.0.1",
         "gitbook-plugin-image-captions": "^3.1.0",
         "gitbook-plugin-page-toc": "^1.0.2",
+        "gitbook-plugin-sitemap-general": "^0.1.1",
         "gitbook-plugin-timeline": "^1.0.13",
         "gitbook-plugin-toggle-headers": "^0.1.0",
         "gitbook-plugin-youtube": "^1.1.0"
